Update pom